--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Raghul Kumaran</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="linkedin.com/in/raghul--kumaran/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://linkedin.com/in/raghul--kumaran/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <!--<a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>-->
           <a href="https://github.com/Raghulkumaran67" class="facebook"><i class="bx bxl-github"></i></a>
         </div>
